api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: gnuu
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
      annotations:
        checksum/secrets: gnuu-secrets | sha256sum
    spec:
      containers:
      - image: gnuu/python
        imagePullPolicy: Always
        name: api
        ports:
          - containerPort: 5000
        command: ["sh","-c"]
        args: ["git clone https://github.com/gnuu-de/apps && cd apps/$APP && cp /api/config.py . && mkdir -p /home/appuser/apps/api/log && gunicorn --bind 0.0.0.0:5000 --access-logfile /dev/stdout wsgi:app"]
        volumeMounts:
        - name: gnuu-api
          mountPath: "/api"
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: gnuu-api
      volumes:
      - name: gnuu-api
        configMap:
          name: gnuu-api
          defaultMode: 0755
